small adjustments in css: add hover in elements

--- a/src/styles/schedule.css
+++ b/src/styles/schedule.css
@@ -48,6 +48,12 @@
       & small {
         text-align: right;
         color: var(--content-tertiary);
+        cursor: pointer;
+
+        &:hover {
+          color: var(--content-primary);
+          text-decoration: underline;
+        }
       }
     }
 
