--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,10 +63,6 @@ button {
   }
 }
 
-.flex {
-  display: flex;
-}
-
 .logo {
   position: absolute;
   top: 0;
@@ -77,6 +73,7 @@ button {
   border-bottom-right-radius: 0.75rem;
 
   height: 3rem;
+  z-index: 2;
 }
 
 .container {
@@ -97,34 +94,6 @@ button {
   }
 }
 
-.input-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  border: 1px solid var(--border-primary);
-  border-radius: 0.5rem;
-  padding: 0.75rem;
-
-  & input {
-    all: unset;
-    font-size: 1rem;
-    font-weight: 400;
-    color: var(--content-secondary);
-
-    &::-webkit-calendar-picker-indicator {
-      cursor: pointer;
-      background: url("../assets/icons/arrow-down.svg") no-repeat;
-    }
-  }
-  &:hover {
-    border-color: var(--border-secondary);
-  }
-
-  &:focus-within {
-    border-color: var(--brand);
-  }
-}
-
 .button-wrapper {
   display: flex;
   justify-content: center;
@@ -135,6 +104,46 @@ button {
 
 .modal {
   display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: rgba(0, 0, 0, 0.01);
+  backdrop-filter: blur(6px);
+  padding: 1.25rem;
+}
+
+.modal-content {
+  max-width: 477px;
+  margin: 2.43rem auto;
+  background-color: var(--background-tertiary);
+  border-radius: 0.75rem;
+  padding-inline: clamp(1.35rem, 5vw, 2.5rem);
+  padding-block: 2.5rem;
+  display: grid;
+  gap: 1.75rem;
+  position: relative;
+}
+
+.modal-header {
+  & .close {
+    position: absolute;
+    top: 1.35rem;
+    right: 1.35rem;
+    cursor: pointer;
+  }
+
+  & p {
+    margin-top: 0.25rem;
+    color: var(--content-secondary);
+  }
+}
+
+.modal-body {
+  display: grid;
 }
 
 @media (width >= 70em) {
