--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -26,18 +26,25 @@ form {
   padding: 0.75rem;
 
   & input,
-  textarea {
+  textarea,
+  select {
     all: unset;
     font-size: 1rem;
     font-weight: 400;
-    color: var(--content-secondary);
+    color: var(--content-primary);
     width: 100%;
 
     &::-webkit-calendar-picker-indicator {
       cursor: pointer;
       background: url("../assets/icons/arrow-down.svg") no-repeat;
+      transition: rotate 0.2s ease-out;
+    }
+
+    &:open::-webkit-calendar-picker-indicator {
+      rotate: 180deg;
     }
   }
+
   &:hover {
     border-color: var(--border-secondary);
   }
@@ -46,8 +53,67 @@ form {
     border-color: var(--brand);
   }
 
-  textarea {
+  & textarea {
     scrollbar-color: var(--brand) var(--background-tertiary);
+  }
+
+  & input[type="date"] {
+    background: var(--background-tertiary);
+    border-radius: 0.5rem;
+  }
+
+  & select {
+    appearance: none;
+    cursor: pointer;
+
+    @supports (appearance: base-select) {
+      &,
+      &::picker(select) {
+        appearance: base-select;
+      }
+    }
+  }
+
+  & select {
+    @supports (appearance: base-select) {
+      &::picker-icon {
+        content: "";
+        width: 20px;
+        height: 20px;
+        background-image: url("../assets/icons/arrow-down.svg");
+        transition: rotate 0.2s ease-out;
+      }
+      &:open::picker-icon {
+        rotate: 180deg;
+      }
+      &::picker(select) {
+        border: 1px solid var(--border-secondary);
+        background: var(--background-tertiary);
+        border-radius: 0.5rem;
+
+        transition: height 0.5s ease-out, opacity 0.5s ease-out, overlay 0.5s,
+          display 0.5s;
+      }
+
+      option {
+        padding: 0.375rem 0.75rem;
+        color: var(--content-secondary);
+        transition-property: color, background;
+        transition-duration: 0.2s;
+        transition-timing-function: ease-out;
+        &:where(:hover, :focus, :active) {
+          background: var(--border-primary);
+          color: white;
+        }
+        &:checked {
+          background: var(--brand);
+          color: white;
+        }
+        &::checkmark {
+          display: none;
+        }
+      }
+    }
   }
 }
 
