--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -45,6 +45,12 @@ form {
     }
   }
 
+  input:-webkit-autofill,
+  textarea:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px var(--background-tertiary) inset;
+    -webkit-text-fill-color: var(--content-primary);
+  }
+
   &:hover {
     border-color: var(--border-secondary);
   }
@@ -55,11 +61,6 @@ form {
 
   & textarea {
     scrollbar-color: var(--brand) var(--background-tertiary);
-  }
-
-  & input[type="date"] {
-    background: var(--background-tertiary);
-    border-radius: 0.5rem;
   }
 
   & select {
